k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: company-website
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: company-website.jonity.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: company-website
            port:
              number: 7000
