k8s/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signatures
spec:
  background: false
  rules:
    - name: verify-cosign-keyless
      match:
        any:
        - resources:
            kinds: ["Pod"]
      verifyImages:
      - imageReferences: ["ghcr.io/jonity-itsx/*"]
        failureAction: Enforce
        attestors:
        - entries:
          - keyless:
              issuer: https://token.actions.githubusercontent.com
              subject: "https://github.com/jonity-itsx/company-website/.github/workflows/deploy.yml@*"
              rekor:
                url: https://rekor.sigstore.dev
